# huxflux

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.test-install  README.md  dev.sh  eslint.config.js  install.sh  install_local.sh  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.workspace.ts
.claude/: REVIEW.md
.claude/agents/: huxflux-domain-extractor.md
.claude/skills/: README.md
.claude/skills/check-domain/: SKILL.md
.claude/skills/commit/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml  pr-title.yml  promote-to-main.yml  publish.yml  release-beta.yml  release-production.yml
apps/desktop/: CLAUDE.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/dev/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/docs/: .gitignore  CLAUDE.md  astro.config.mjs  mdx-components.tsx  netlify.toml  package.json
apps/marketing/: CLAUDE.md  index-v2.html  index-v3.html  index-v4.html  index-v5.html  index.html
apps/mobile/: CLAUDE.md  app.json  global.css  metro.config.js  package.json  tailwind.config.js  theme.ts  tsconfig.json
apps/server/: .env.example  CLAUDE.md  REFACTOR.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/web/: CLAUDE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
patches/: @radix-ui__react-compose-refs@1.1.2.patch
scripts/: Dockerfile.linux-builder  check-domains.mjs  check-migrations.mjs  release-desktop.sh  release-install.sh  release-server.sh
(+865 files in other folders)
