[package]
name = "huxflux-desktop"
version = "0.3.19"
description = "Huxflux desktop client"
authors = []
edition = "2021"

[lib]
name = "huxflux_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "devtools"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
